--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "files.associations": {
+        "*.css": "tailwindcss",
         "stdlib.h": "c",
         "string.h": "c",
-        "tokenizer.h": "c"
+        "tokenizer.h": "c",
+        "strvec.h": "c"
     }
 }
