rewrite of parser v1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "string.h": "c",
         "tokenizer.h": "c",
         "svec.h": "c",
-        "minunit.h": "c"
+        "minunit.h": "c",
+        "json_parse.h": "c"
     }
 }
