--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,8 @@
       "type": "cppdbg",
       "MIMode": "lldb",
       "request": "launch",
-      "program": "${workspaceFolder}/build/jparser",
-      "args": ["./out/sample.json"],
+      "program": "${workspaceFolder}/src/parse",
+      "args": [],
       "cwd": "${workspaceFolder}",
       "stopAtEntry": false,
       "externalConsole": false,
@@ -20,9 +20,7 @@
           "text": "-enable-pretty-printing",
           "ignoreFailures": true
         }
-      ],
-
-      "preLaunchTask": "build"
+      ]
     }
   ]
 }
