simplified version of parser

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
@@ -9,10 +6,10 @@
       "type": "cppdbg",
       "MIMode": "lldb",
       "request": "launch",
-      "program": "${workspaceFolder}/src/parse",
-      "args": [],
+      "program": "${workspaceFolder}/bin/jparse",
+      "args": ["./sample.json"],
       "cwd": "${workspaceFolder}",
-      "stopAtEntry": false,
+      "stopAtEntry": true,
       "externalConsole": false,
       "setupCommands": [
         {
@@ -22,5 +19,6 @@
         }
       ]
     }
-  ]
+  ],
+  "preLaunchTask": "build"
 }
